--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "morgan": "^1.5.3"
   },
   "devDependencies": {
+    "del": "^1.2.0",
     "gulp": "^3.9.0",
     "gulp-concat": "^2.6.0",
     "gulp-copy": "0.0.2",
