--- a/bower.json
+++ b/bower.json
@@ -17,6 +17,7 @@
     "angular-ui-router": "~0.2.15",
     "bootstrap": "~3.3.4",
     "angular-sanitize": "~1.4.3",
-    "ng-prettyjson": "~0.1.9"
+    "ng-prettyjson": "~0.1.9",
+    "font-awesome": "~4.3.0"
   }
 }
