Got satellizer working to login users using Github

--- a/.jshintrc
+++ b/.jshintrc
@@ -6,6 +6,7 @@
     "module": false,
     "console": false,
     "document": false,
-    "__dirname": false
+    "__dirname": false,
+    "process": false
   }
 }
