--- a/bower.json
+++ b/bower.json
@@ -18,6 +18,7 @@
     "bootstrap": "~3.3.4",
     "angular-sanitize": "~1.4.3",
     "ng-prettyjson": "~0.1.9",
-    "font-awesome": "~4.3.0"
+    "font-awesome": "~4.3.0",
+    "satellizer": "~0.11.3"
   }
 }
