--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon server/app.js",
+    "dev": ". .env && nodemon server/app.js",
     "prod": "gulp --type production && forever start server/app.js",
     "clean": "rm -rf node_modules && rm -rf public && npm install && bower install && gulp build"
   },
@@ -14,8 +14,12 @@
   "dependencies": {
     "body-parser": "^1.12.4",
     "express": "^4.12.4",
+    "jwt-simple": "^0.3.0",
+    "moment": "^2.10.3",
     "mongoose": "^4.0.4",
-    "morgan": "^1.5.3"
+    "morgan": "^1.5.3",
+    "querystring": "^0.2.0",
+    "request": "^2.60.0"
   },
   "devDependencies": {
     "del": "^1.2.0",
