--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.12.4",
+    "colors": "^1.1.2",
     "express": "^4.12.4",
     "jwt-simple": "^0.3.0",
     "moment": "^2.10.3",
