--- a/bower.json
+++ b/bower.json
@@ -19,6 +19,7 @@
     "angular-sanitize": "~1.4.3",
     "ng-prettyjson": "~0.1.9",
     "font-awesome": "~4.3.0",
-    "satellizer": "~0.11.3"
+    "satellizer": "~0.11.3",
+    "angular-jwt": "~0.0.9"
   }
 }
