--- a/bower.json
+++ b/bower.json
@@ -20,6 +20,7 @@
     "ng-prettyjson": "~0.1.9",
     "font-awesome": "~4.3.0",
     "satellizer": "~0.11.3",
-    "angular-jwt": "~0.0.9"
+    "angular-jwt": "~0.0.9",
+    "angular-resource": "~1.4.3"
   }
 }
